<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PropertyDetailsActivity"
    android:background = "@color/darkGrey"
    tools:showIn="@layout/app_bar_property_details">


    <ImageButton
        android:id="@+id/property_details_image"
        android:layout_width="260dp"
        android:layout_height="165dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_edges_darker_grey"
        android:contentDescription="@string/property_image"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/property_details_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_image_black_48dp" />

    <TextView
        android:id="@+id/property_details_name"
        android:layout_width="387dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/building"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/property_details_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/property_details_image" />

    <TextView
        android:id="@+id/property_details_address"
        android:layout_width="381dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/address"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/property_details_name" />

    <Button
        android:id="@+id/property_details_tenants_button"
        style="@style/Widget.AppCompat.Button.Colored"

        android:layout_width="148dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edges"
        android:text="@string/tenants"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/property_details_policies_button" />

    <Button
        android:id="@+id/property_details_announcements_button"
        android:layout_width="148dp"
        android:layout_height="55dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_edges"
        android:text="@string/announcements"
        app:layout_constraintBottom_toTopOf="@+id/property_details_documents_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/property_details_address" />

    <Button
        android:id="@+id/property_details_policies_button"
        android:layout_width="148dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_edges"
        android:text="@string/policies"
        app:layout_constraintBottom_toTopOf="@+id/property_details_tenants_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/property_details_announcements_button"
        app:layout_constraintTop_toBottomOf="@+id/property_details_address" />

    <Button
        android:id="@+id/property_details_documents_button"
        android:layout_width="148dp"
        android:layout_height="55dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/round_edges"
        android:text="@string/documents"
        app:layout_constraintEnd_toStartOf="@+id/property_details_tenants_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/property_details_announcements_button" />

</android.support.constraint.ConstraintLayout>