<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TenantPropertyActivity"
    tools:showIn="@layout/app_bar_tenant_property">

    <ImageButton
        android:id="@+id/property_details_image"
        android:layout_width="260dp"
        android:layout_height="165dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_edges_darker_grey"
        android:contentDescription="@string/property_image"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/property_details_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_image_black_48dp" />

    <TextView
        android:id="@+id/property_details_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/building"
        android:textColor="@color/textWhite"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/property_details_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/property_details_image" />

    <TextView
        android:id="@+id/property_details_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/address"
        android:textColor="@color/textWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/property_details_name" />

    <TextView
        android:id="@+id/property_details_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/room"
        android:textColor="@color/textWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/property_details_address" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/title_activity_landlord_policies"
        android:textColor="@color/textWhite"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/property_details_room" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/policies_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</android.support.constraint.ConstraintLayout>